--- a/src/Layers/01_Fight/FightLayer.scss
+++ b/src/Layers/01_Fight/FightLayer.scss
@@ -1,4 +1,6 @@
-.layer-01-container {
-    height: 100vh;
-    width: 100vh;
+
+.t-250-square {
+    width: 250px;
+    height: 250px;
+    margin: 10px;
 }
