--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,10 +2,33 @@
 @import '../Layers/01_Fight/FightLayer.scss';
 
 // Global Styles
+html {
+    background-color: blue;
+}
+body  {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    background-color: red;
+}
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     text-align: center;
-    background-color: aqua
+    background-color: aqua;
+    box-sizing: border-box;
+  }
+// This sets the base for every layer. Add through 'n' layers.
+  @for $i from 0 through 2 {
+    .layer-#{if($i < 10, '0' + $i, $i)}-container {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: $i * 100;
+      display: flex;
+    }
   }
