--- a/src/Layers/01_Fight/FightLayer.scss
+++ b/src/Layers/01_Fight/FightLayer.scss
@@ -1,6 +1,75 @@
 
-.t-250-square {
-    width: 250px;
-    height: 250px;
-    margin: 10px;
+.run-info {
+    background-color: lightblue;
+    display:grid;
+    flex-direction: row;
+    width: 100%;
+    height: 5%;
+}
+.info-character {
+    display: flex;
+    height: 100%;
+}
+.info-floor {
+    display:flex;
+    height: 100%;
+
+}
+.info-system {
+    width: 12%;
+    display: flex;
+    justify-content: space-between;
+    justify-self: flex-end;
+    align-items: center;
+}
+.artifact-bar {
+    background-color: rgba(230, 240, 210, 1);
+    display: flex;
+    width: 100%;
+    height: 10%;
+    box-sizing: border-box;
+    border: 1px solid red;
+}
+.battle-stations {
+    width: 100%;
+    display:flex;
+    height: 55%;
+}
+.card-area {
+    display:flex; 
+    flex-direction: row;
+    width: 100%;
+    background-color: aquamarine;
+    height: 27.5%;
+    max-height: 27.5%;
+    padding-bottom: 2.5%;
+}
+.draw-and-mana {
+    display: flex;
+    height: 100%;
+    background-color: bisque;
+    width: 12.5%;
+}
+.deck {
+    display: flex;
+    background-color:aliceblue;
+    height: 100%;
+    width: 75%;
+    justify-content: space-around;
+    align-items: center;
+}
+.card {
+    display:flex;
+    width: 12%;
+    max-height: 80%;
+    aspect-ratio:  9 / 14;
+    box-sizing: border-box;
+    border: 1px solid blue;
+    border-radius: 4px;
+}
+.discard-and-endTurn {
+    display:flex;
+    background-color:azure;
+    height: 100%;
+    width: 12.5%;
 }
