--- a/src/Layers/01_Fight/FightLayer.scss
+++ b/src/Layers/01_Fight/FightLayer.scss
@@ -73,12 +73,30 @@
 }
 .card {
     display:flex;
+    background-color: beige;
     width: 12%;
     max-height: 80%;
     aspect-ratio:  9 / 14;
     box-sizing: border-box;
     border: 1px solid blue;
     border-radius: 4px;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    bottom: 0;
+    transition: all 0.2s ease-in-out;
+}
+.card:hover {
+    bottom: 20px;
+}
+.card.selected {
+    bottom: 100px;
+}
+.play-card-button {
+    position: absolute;
+    width: 100%;
+    height: 36px;
+    bottom: -50px;
 }
 .discard-and-endTurn {
     display:flex;
