--- a/src/Layers/01_Fight/FightLayer.scss
+++ b/src/Layers/01_Fight/FightLayer.scss
@@ -1,4 +1,6 @@
 
+// Card aspect-ratio: 9/14;
+
 .run-info {
     background-color: lightblue;
     display: flex;
@@ -78,6 +80,34 @@
     justify-content: center;
     align-items: center;
 }
+.mana-container {
+    border: 1px solid red;
+    background-color: rgb(242, 179, 190);
+    rotate: (45deg);
+    width: 45px;
+    height: 45px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.card-mana-container {
+    position: absolute;
+    top: -17px;
+    left: -13px;
+    border: 3px double goldenrod;
+    outline: solid yellow;
+    border-radius: 8px;
+    background-color: rgb(233, 242, 179);
+    rotate: (45deg);
+    width: 30px;
+    height: 30px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.mana-value, .card-mana-value {
+    rotate: (-45deg);
+}
 .hand {
     display: flex;
     justify-content: center;
@@ -89,12 +119,12 @@
 }
 .card {
     display:flex;
-    background-color: beige;
+    background-color: rgb(209, 230, 249);
     width: 12%;
     max-height: 80%;
-    aspect-ratio:  9 / 14;
+    aspect-ratio:  9/14;
     box-sizing: border-box;
-    border: 1px solid blue;
+    border: 1px solid rgb(53, 102, 251);
     border-radius: 4px;
     flex-direction: column;
     justify-content: center;
@@ -126,8 +156,32 @@
     height: 100%;
     width: 12.5%;
 }
+.discard-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70%;
+}
+.discard-placeholder, .draw-placeholder {
+    width: 80px;
+    aspect-ratio: 9/14;
+    border-radius: 4px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.discard-placeholder {
+    border: 8px double rgb(5, 107, 175);
+    background-color:rgb(203, 227, 243);
+}
+.draw-placeholder {
+    border: 8px double rgb(5, 175, 161);
+    background-color:rgb(203, 243, 218);
+}
 .end-turn-button {
     height: 40px;
+    width: 75%;
+    border: 4px solid rgb(202, 147, 75);
 
 }
 .unit {
