--- a/src/Layers/01_Fight/FightLayer.scss
+++ b/src/Layers/01_Fight/FightLayer.scss
@@ -133,7 +133,7 @@
     // transition: all 0.2s ease-in-out;
     display: flex;
     background-color: rgb(209, 230, 249);
-    width: 10%;
+    width: 8vw;
     /* max-height: 80%; */
     aspect-ratio: 9 / 14;
     box-sizing: border-box;
