--- a/src/Layers/01_Fight/Deck/CardAnimation.scss
+++ b/src/Layers/01_Fight/Deck/CardAnimation.scss
@@ -30,5 +30,5 @@
   }
   
   .animate-draw {
-    animation: drawCard 0.5s ease-out forwards;
+    animation: drawCard 0.5s ease-in-out forwards;
   }
