--- a/src/Layers/01_Fight/FightLayer.scss
+++ b/src/Layers/01_Fight/FightLayer.scss
@@ -118,19 +118,7 @@
     align-items: center;
 }
 .card {
-    // display:flex;
-    // background-color: rgb(209, 230, 249);
-    // width: 12%;
-    // max-height: 80%;
-    // aspect-ratio:  9/14;
-    // box-sizing: border-box;
-    // border: 1px solid rgb(53, 102, 251);
-    // border-radius: 4px;
-    // flex-direction: column;
-    // justify-content: center;
-    // position: relative;
-    // bottom: 0;
-    // transition: all 0.2s ease-in-out;
+    will-change: transform;
     display: flex;
     background-color: rgb(209, 230, 249);
     width: 8vw;
