--- a/src/Layers/01_Fight/FightLayer.scss
+++ b/src/Layers/01_Fight/FightLayer.scss
@@ -193,3 +193,32 @@
 .flipped-horizontal {
     transform: scaleX(-1);
 }
+
+.grid-perspective {
+    display:flex;
+    perspective: 500px;
+}
+.grid {
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    transform-style: preserve-3d;
+    transform: rotateX(45deg);
+}
+.grid-row {
+    display:flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    box-sizing: border-box;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 20%;
+}
+.grid-item {
+    width: 20%;
+    border: 1px solid black;
+}
+.grid-item:hover {
+    background-color: yellow;
+}
