--- a/src/Layers/01_Fight/FightLayer.scss
+++ b/src/Layers/01_Fight/FightLayer.scss
@@ -46,7 +46,8 @@
     display:flex;
     justify-content: center;
     height: 100%;
-    width: 50%;
+    overflow: hidden;
+    // width: 50%;
     box-sizing: border-box;
     border: 1px solid green;
 
@@ -184,6 +185,13 @@
     justify-content: center;
     transition: all 0.3s ease-in-out;
 }
+.grid-item > .unit {
+    position: absolute;
+    transform-style: preserve-3d;
+    // background-color: rgba(255,87,199, 0.75);
+    transform: rotateX(-40deg) rotateY(0deg) rotateZ(-14deg) translateY(-23%) skew(10deg, 14deg);
+    // top: -200px;
+}
 .unit.dead > img {
     transform: rotate(180deg);
 }
@@ -196,6 +204,8 @@
 
 .grid-perspective {
     display:flex;
+    width: 100%;
+    transform-style: preserve-3d;
     perspective: 500px;
 }
 .grid {
@@ -203,8 +213,11 @@
     display:flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    transform-style: preserve-3d;
+    box-sizing:border-box;
+    // overflow: hidden;
     transform: rotateX(45deg);
+    background-color: black;
+    background: url("src/assets/Battlemap_terrain_Grass_1_200percent.png");
 }
 .grid-row {
     display:flex;
@@ -213,12 +226,21 @@
     box-sizing: border-box;
     justify-content: space-evenly;
     width: 100%;
-    height: 20%;
+    height: 10%;
 }
 .grid-item {
-    width: 20%;
+    width: 10%;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position:relative;
+    perspective: 500px;
 }
 .grid-item:hover {
     background-color: yellow;
+}
+.grid-item-test {
+    transform: rotateX(-45deg);
 }
