--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import '../Layers/00_Background/BackgroundLayer.scss';
 @import '../Layers/01_Fight/FightLayer.scss';
 @import '../Layers/02_Map/MapLayer.scss';
+@import '../Layers/02_Map/MapScreens.scss';
 @import '../components/AudioSettings/AudioSettings.scss';
 
 $number_of_layers: 3;
