Equipment slots, card effect bugfixes,

--- a/src/Layers/01_Fight/FightLayer.scss
+++ b/src/Layers/01_Fight/FightLayer.scss
@@ -311,7 +311,7 @@
 .creature-click-target {
     position: absolute;
     cursor: pointer;
-    background-color: aqua;
+    background-color: rgba(5, 107, 175, 0.25);
 }
 
 // Cell-based targeting
